# pyserver

./: LICENSE  README.md  default.nix  pyproject.toml  pyserver.py  shell.nix
src/pyserver_Mag1cByt3s/: setup.py
src/pyserver_Mag1cByt3s.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
